# rei-cpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: algebra.h  asset_loader.h  camera.h  console.h  model.h  renderer.h
lib/: .gitignore
samples/: CMakeLists.txt  hello_cube.cpp  procedural_mesh.cpp  rt_raytracing_demo.cpp
src/: CMakeLists.txt  algebra.cpp  algebra.h  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  color.cpp  color.h  common.h  console.cpp  console.h  container_utils.h  debug.h  geometry.cpp  geometry.h  graphic_handle.h  graphics.cpp  input.cpp  input.h  light.h  material.cpp  material.h  math.cpp  math.h  model.cpp  model.h  pixels.cpp  pixels.h  render_pipeline.h  renderer.cpp  renderer.h  rmath.h  scene.cpp  scene.h  shader_struct.h  string_utils.h  type_utils.h  variant_utils.h  viewer.cpp  (+1 more)
src/app_utils/: app.cpp  app.h  viewer.cpp  viewer.h  win_app.cpp  win_app.h  win_viewer.cpp  win_viewer.h
src/direct3d/: d3d_common_resources.cpp  d3d_common_resources.h  d3d_device_resources.cpp  d3d_device_resources.h  d3d_renderer.cpp  d3d_renderer.h  d3d_renderer_resources.h  d3d_resource_types.h  d3d_shader_struct.h  d3d_utils.cpp  d3d_utils.h  d3d_viewer.cpp  d3d_viewer.h  d3d_viewport_resources.cpp  d3d_viewport_resources.h  effects.hlsl  shader.hlsl
src/direct3d/shader/: blit.hlsl  blue_noise.hlsl  bxdf.hlsl  common.hlsl  deferred_base.hlsl  deferred_common.hlsl  deferred_shading.hlsl  halton.hlsl  hybrid_base_shading.hlsl  hybrid_common.hlsl  hybrid_direct_area_lighting.hlsl  hybrid_direct_lighting.hlsl  hybrid_gpass.hlsl  hybrid_multibounce.hlsl  hybrid_raytracing.hlsl  hybrid_stochastic_shadow_denoise.hlsl  hybrid_stochastic_shadow_sample_generate.hlsl  hybrid_stochastic_shadow_trace.hlsl  integrator.hlsl  procedural_env.hlsl  raster_common.hlsl  raytracing.hlsl  shader.hlsl  taa.hlsl
src/editor/: imgui.cpp  imgui.h  imgui_global.cpp  imgui_global.h
src/math/: algebra.cpp  algebra.h  halton.cpp  halton.h  math_utils.h  num_types.h  rect.h
src/opengl/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.h  gl_viewer.cpp  gl_viewer.h  pixels.cpp  pixels.h  renderer.cpp  renderer.h  viewer.cpp  viewer.h
src/render_pipelines/: deferred.cpp  deferred.h  hybrid.cpp  hybrid.h  imgui_pass.cpp  imgui_pass.h  imgui_pipeline.h  render_pass.h  render_pipeline_base.h  rt_path_tracing.cpp  rt_path_tracing.h  stochastic_shadow.cpp  stochastic_shadow.h
src/renderer/: graphics_const.h  graphics_desc.cpp  graphics_desc.h  graphics_handle.h  viewport.cpp  viewport.h
src/win32/: safe_windows.h
tests/: CMakeLists.txt  color_cube.dae  cornell_box.dae  cube.dae  draw_cube.cpp  draw_model.cpp  draw_world.cpp  effects.hlsl  hello_rectangle.cpp  hello_texture.cpp  icosphere.dae  logl_work.cpp  monkey.dae  play_with_glfw.cpp  test_algebra.cpp  test_asset_loader.cpp  test_camera.cpp  test_color.cpp  test_d3d11.cpp  test_effects.hlsl  test_math.cpp  test_model.cpp  test_pixels.cpp  test_viewer.cpp  three_triangle.cpp  try_assimp.cpp
tools/: format.py  replace.py
